// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.coffee 1`] = `
export {value1, value2 as value2_renamed, value3, value4 as value4_renamed, value5} from 'exports'

export {b} from './baz'

export * from 'mod'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export {
  value1
  value2 as value2_renamed
  value3
  value4 as value4_renamed
  value5
} from "exports"
export { b } from "./baz"
export * from "mod"

`;

exports[`test.coffee 2`] = `
export {value1, value2 as value2_renamed, value3, value4 as value4_renamed, value5} from 'exports'

export {b} from './baz'

export * from 'mod'
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
export {
  value1
  value2 as value2_renamed
  value3
  value4 as value4_renamed
  value5
} from "exports"
export {b} from "./baz"
export * from "mod"

`;
